Implements ability to calculate length as well as fixes broken input box positioning implementation

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,7 +51,7 @@
   border: none;
   color: #f5efed;
   text-align: center;
-  width: 40px;
+  width: 50px;
   z-index: 100;
 }
 
